# stellarPOS-contracts

./: Cargo.toml  Makefile  README.md  generate_commits.sh
contracts/escrow-service/src/: lib.rs
contracts/loyalty-program/src/: lib.rs
contracts/merchant-registry/src/: lib.rs
contracts/payment-processor/: Cargo.toml
contracts/payment-processor/src/: lib.rs
contracts/shared/src/: lib.rs
contracts/treasury/src/: lib.rs
