[workspace]
members = [
    "contracts/payment-processor",
    "contracts/escrow-service", 
    "contracts/loyalty-program",
    "contracts/treasury",
    "contracts/merchant-registry",
    "contracts/shared"
]
resolver = "2"

[workspace.dependencies]
soroban-sdk = { version = "21.0.0" }
soroban-token-sdk = { version = "21.0.0" }

[workspace.dependencies.soroban-sdk]
version = "21.0.0"
features = ["testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true