[package]
name = "payment-processor"
version = "1.0.0"
edition = "2021"
authors = ["StellarPOS Team <team@stellarpos.app>"]
description = "Core payment processing contract for StellarPOS"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = { workspace = true }
soroban-token-sdk = { workspace = true }
shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[[bin]]
name = "payment-processor"
path = "src/bin/main.rs"